[package]
name = "winit-blit"
version = "0.0.0"
authors = ["Osspial <osspial@gmail.com>"]
edition = "2018"
description = "Reserved. Blit directly to Winit Windows"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["x11"]
x11 = ["x11-dl"]

[dependencies]
raw-window-handle = "0.6"
winapi = {version = "0.3", features = ["windef", "winuser", "wingdi"]}
rayon = {version = "1", optional = true}

[dev-dependencies]
winit = "0.22.0"
serial_test = "*"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
x11-dl = { version = "2.18.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = {version = "0.3.49", features = [
  "Attr",
  "CanvasRenderingContext2d",
  "Document",
  "DomStringMap",
  "Element",
  "HtmlCanvasElement",
  "HtmlCollection",
  "HtmlElement",
  "ImageData",
  "NamedNodeMap",
] }
wasm-bindgen = "0.2.72"
log = "0.4.14"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
winit = {version = "0.22.0", features = ["web-sys"] }
console_log = "0.2"
