[package]
name = "web"
version = "0.1.0"
authors = ["Bill Thiede <git@xinu.tv>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.14"
wasm-bindgen = "0.2.72"
web-sys = {version = "0.3.49", features = ["CanvasRenderingContext2d", "ImageData", "HtmlCanvasElement"] }
winit = {version = "0.22.0", features = ["web-sys"] }
console_log = "0.2"
winit-blit = {path = "../../"}
console_error_panic_hook = "0.1.6"
